students/Chereshko_Daniil_Nikolaevich/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app23
  namespace: web23
  labels:
    app: app23
    org.bstu.student.fullname: "Черешко Даниил Николаевич"
    org.bstu.student.id: "220250"
    org.bstu.group: "AS-576"
    org.bstu.variant: "23"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "Danik-oss"
    org.bstu.student.slug: "as-576-220250-v23"
spec:
  type: ClusterIP
  selector:
    app: app23
  ports:
    - port: 8043
      targetPort: 9043
      protocol: TCP
      name: http
